--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.4.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
